# sat.hs

./: Lens.hs  README.md  Sat.hs  sat.cabal  stack.yaml
Data/: CNF.hs  Expr.hs  Only.hs
Util/HashMap/: Strict.hs
test/: Main.hs
